--- a/html-css/exercicios/ex026/mq002/estilos/retrato.css
+++ b/html-css/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-/*Aparelho em pe(portrait) *?
+/*Aparelho em pe(portrait) */
+
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
