--- a/html-css/exercicios/ex026/mq002/estilos/style.css
+++ b/html-css/exercicios/ex026/mq002/estilos/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /* configuração gerais */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow: 3px 3px 0px rgb(20, 20, 150);
+    padding: 10px;
+}
