--- a/html-css/exercicios/ex026/mq005/estilos/style.css
+++ b/html-css/exercicios/ex026/mq005/estilos/style.css
@@ -19,8 +19,21 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+span#burguer {
+    background-color: rgb(31, 31, 31);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
